--- a/client/src/components/Reviews.css
+++ b/client/src/components/Reviews.css
@@ -49,7 +49,7 @@
 .reviews-scroll-track {
   display: flex;
   gap: 24px;
-  animation: autoScroll 40s linear infinite;
+  animation: autoScroll 120s linear infinite;
   width: max-content;
 }
 
@@ -62,7 +62,7 @@
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-50%);
+    transform: translateX(calc(-100% / 6));
   }
 }
 
